# speak

./: Cargo.toml  DRAFT.md  README.md  TODO.md
.github/workflows/: rust-clippy.yml
samples/: collatz.spk  error.spk  fib.spk  fizzbuzz.spk  fn_expr.spk  graph.spk  hello.spk  hello_world.spk  object.spk  structs.spk
src/: main.rs
src/core/: error.rs  eval.rs  lexer.rs  log.rs  mod.rs  parser.rs  runtime.rs
