[package]
name = "speak"
version = "0.1.0"
edition = "2021"
description = """Speak is a programming language that is designed to have configurable keywords in an attempt to allow for \
the use of multiple spoken languages as preferred by the programmer."""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.23", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.0"
