[package]
name = "speak"
version = "0.1.0"
edition = "2021"
description = """Speak is a programming language that is designed to have configurable keywords in an attempt to allow for \
the use of multiple spoken languages as preferred by the programmer."""

[profile.release]
# strip = true
# lto = true
# codegen-units = 1

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.0"
