[package]
name = "speak"
version = "0.1.0"
edition = "2021"
description = """Speak is an experimental programming language that aims to have configurable keywords. \
This is to allow for the use of any written human language as preferred by the user."""

[profile.release]
# strip = true
# lto = true
# codegen-units = 1

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.0"
